force-app/main/default/objects/Opportunity/fields/Discount_Percent_Status__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent_Status__c</fullName>
    <label>Discount Percent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>नगर पालिका का पट्टा / UIT का पट्टा / नगर निगम का पट्टा / राजस्थान हाउसिंग बोर्ड का पट्टा / RICCO का पट्टा /Development authority(विकास प्राधिकरण) का पट्टा</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>