force-app/main/default/objects/Opportunity/recordTypes/Government.recordType-meta.xml
<RecordType>
    <fullName>Government</fullName>
    <active>true</active>
    <businessProcess>Government sale</businessProcess>
    <label>Government</label>
</RecordType>