force-app/main/default/objects/Opportunity/recordTypes/Non_Government.recordType-meta.xml
<RecordType>
    <fullName>Non_Government</fullName>
    <active>true</active>
    <businessProcess>Non-Government</businessProcess>
    <label>Non Government</label>
</RecordType>