force-app/main/default/objects/Opportunity/validationRules/Validation_on_Stage_and_Acct_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Stage_and_Acct_type</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL( Account_type__c,&apos;Customer&apos;),NOT(ISPICKVAL( StageName ,&apos;Closed Won&apos;)),False )</errorConditionFormula>
    <errorDisplayField>Account_type__c</errorDisplayField>
    <errorMessage>Opportunity Stage must be &apos;Closed Won&apos;.</errorMessage>
</ValidationRule>